# qlever-control

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: end-to-end-test-macos.yml  end-to-end-test-qoxigraph.yml  end-to-end-test-ubuntu.yml  format-check.yml  publish-pypi.yml  pytest.yml
src/base_engine/: command.py  config.py  main.py
src/qblazegraph/: Dockerfile
src/qblazegraph/commands/: benchmark_queries.py  index.py  index_stats.py  query.py  start.py  stop.py
src/qgraphdb/commands/: benchmark_queries.py  index.py  index_stats.py  query.py  start.py  stop.py
src/qjena/: Dockerfile
src/qjena/commands/: benchmark_queries.py  index.py  index_stats.py  query.py  start.py  stop.py
src/qlever/: command.py  config.py  containerize.py  memory_monitor.py  memory_monitor_old.py  monitor_queries_app.py  qleverfile.py  resource_monitor.py  usage_plot.py  util.py
src/qlever/Qleverfiles/: Qleverfile.dblp  Qleverfile.dblp-plus  Qleverfile.dbpedia  Qleverfile.default  Qleverfile.dnb  Qleverfile.fbeasy  Qleverfile.freebase  Qleverfile.imdb  Qleverfile.ohm-planet  Qleverfile.osm-country  Qleverfile.osm-planet  Qleverfile.osm-planet-from-pbf  Qleverfile.pubchem  Qleverfile.uniprot  Qleverfile.wikidata  Qleverfile.wikidata-munged  Qleverfile.wikimedia-commons  Qleverfile.yago-4
src/qlever/commands/: add_text_index.py  benchmark_queries.py  cache_stats.py  clear_cache.py  example_queries.py  extract_queries.py  get_data.py  index.py  index_stats.py  log.py  materialized_view.py  metric_logs_to_rdf.py  monitor_queries.py  monitor_queries_tui.py  query.py  rebuild_index.py  reset_updates.py  serve_evaluation_app.py  server_resource_monitor.py  settings.py  setup_config.py  start.py  status.py  stop.py  system_info.py  ui.py  update.py  update_wikidata.py  warmup.py
src/qlever/evaluation/www/: compareExecTrees.js  comparison.js  details.js  index.html  main.js  styles.css  util.js
src/qlever/monitor/: app.py  historic.py  historic_data.py  historic_stubs.py  live.py  live_data.py  live_engine.py  live_stubs.py  log_reader.py  metrics.py  models.py  monitor.tcss  run_monitor.py  util.py  widgets.py
src/qlever/monitor/views/: base_view.py  filter_modal.py  historic.py  historic_view.py  live.py  live_view.py
src/qlever/monitor/widgets/: controls_row.py  header_row.py  metrics_pane.py  metrics_row.py  mode_picker.py  query_table.py  selected_window.py  sparql_pane.py  status_row.py  timeline.py  window_controls.py  window_stepper.py
src/qlever/monitor_queries/: app.py  historic_data.py  live_data.py  log_reader.py  log_to_rdf.py  metrics.py  models.py  monitor.tcss  resource_data.py  util.py
src/qlever/monitor_queries/views/: filter_modal.py  historic.py  live.py  resource_plot_modal.py
src/qlever/monitor_queries/widgets/: controls_row.py  detail_switcher.py  (+13 more)
src/qlever/resource_usage/: resource_monitor.py  usage_plot.py
src/qmdb/: qleverfile.py
src/qmdb/commands/: benchmark_queries.py  index.py  index_stats.py  query.py  setup_config.py  start.py  status.py  stop.py
src/qoxigraph/: qleverfile.py
src/qoxigraph/commands/: benchmark_queries.py  get_data.py  index.py  index_stats.py  log.py  query.py  setup_config.py  start.py  status.py  stop.py
src/qoxigraph/resource_usage/: usage_plot.py
src/qvirtuoso/: qleverfile.py
src/qvirtuoso/commands/: benchmark_queries.py  index.py  index_stats.py  query.py  setup_config.py  start.py  status.py  stop.py
test/qlever/: conftest.py  test_historic_data.py  test_live_data.py  test_live_engine.py  test_log_reader.py  test_resource_data.py  test_resource_monitor.py  test_usage_plot.py  test_util.py
test/qlever/commands/: test_benchmark_queries_methods.py  test_cache_stats_execute.py  test_cache_stats_other_methods.py  test_index_execute.py  test_index_other_methods.py  test_index_stats_methods.py  test_log_other_methods.py  test_start_execute.py  test_start_other_methods.py  test_status_execute.py  test_status_other_methods.py  test_stop_execute.py  test_stop_other_methods.py
test/qlever/resource_usage/: test_resource_monitor.py  test_usage_plot.py
