[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlever"
description = "Command-line tool for using the QLever graph database"
version = "0.5.49"
authors = [
    { name = "Hannah Bast", email = "bast@cs.uni-freiburg.de" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"

keywords = ["Graph database", "Triplestore", "Knowledge graphs", "SPARQL", "RDF"]

classifiers = [
 "Topic :: Database :: Database Engines/Servers",
 "Topic :: Database :: Front-Ends"
]

dependencies = [ "psutil", "termcolor", "argcomplete", "pyyaml", "rdflib", "requests-sse", "tqdm>=4.60.0", "textual>=8.0", "textual-plotext", "rich" ]

[project.optional-dependencies]
plot = [ "matplotlib", "numpy" ]
dev = [ "ruff", "pre-commit" ]

[project.urls]
homepage = "https://github.com/ad-freiburg/qlever"
documentation = "https://docs.qlever.dev"
repository = "https://github.com/ad-freiburg/qlever.git"
bugtracker = "https://github.com/ad-freiburg/qlever/issues"

[project.scripts]
"qlever" = "qlever.qlever_main:main"

[tool.setuptools]
package-data = { "qlever" = ["Qleverfiles/*", "evaluation/www/*", "monitor_queries/*.tcss"] }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79 
[tool.ruff.lint]
extend-select = ["I"]
